@@ -11,6 +11,7 @@
 #                                                                                          #
 ############################################################################################
 
+[179] --> Fix SpellFamily for Redemption (Paladin) so it scales with haste rating. (Thx  mweinelt)
 [178] --> Implement Battleground Crossfraction. (Thx Quentis)
 [177] --> Implement Fast Arena Start. (Thx Demonid)
 [176] --> Fix Sylvanas Music Box.
